<resources>
    <string name="app_name">appMovilMisionTic</string>
    <string name="txv_vista1">MiniMarket</string>
    <string name="txv_bienvenido">Welcome</string>
    <string name="txt_button">start</string>
    <string name="txv_vista2">Customers</string>
    <string name="txt_user">User</string>
    <string name="edit_user">insert your user</string>
    <string name="txt_clave">Password</string>
    <string name="edit_clave">insert your password</string>
    <string name="txt_button2">Login</string>
    <string name="txv_cat1">Fruits and Vegetables</string>
    <string name="txv_cat2">Meats</string>
    <string name="txv_cat3">Home Care</string>
    <string name="txv_cat4">Dry Beans</string>
    <string name="txt_button3">buy</string>
    <string name="txt_recibo">Receipt</string>
    <string name="bttn_pagar">pay</string>
    <string name="txt_nombre">Name</string>
    <string name="txt_correo">Mail</string>
    <string name="txt_contrasena">Password</string>
    <string name="txt_contrasenaRepeat">Repeat Password</string>
    <string name="txt_registrarse">Check in</string>
    <string name="txt_iniciar_sesion">Start section</string>
    <string name="value_map">AIzaSyBR_0katflK0bUCPbtoCHXvWF8ja1dmxVE</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
