<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/beige"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".activities.ActivityRegistro">


    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imagen_register"
            android:layout_width="200dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15dp"
            android:src="@mipmap/ic_launcher_round" />
    </LinearLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nombre_layout"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginBottom="15dp">

        <EditText
            android:id="@+id/nombre_usuario"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@drawable/fondo_forms"
            android:hint="@string/txt_nombre" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_layout"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginBottom="15dp">

        <EditText
            android:id="@+id/email_usuario"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@drawable/fondo_forms"
            android:hint="@string/txt_correo"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_layout"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginBottom="15dp">

        <EditText
            android:id="@+id/password_usuario"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@drawable/fondo_forms"
            android:hint="@string/txt_contrasena"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/repetirPassword_layout"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginBottom="50dp">

        <EditText
            android:id="@+id/repetirPassword_user"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@drawable/fondo_forms"
            android:hint="@string/txt_contrasenaRepeat"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_registro"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:text="@string/txt_registrarse"
        />

</LinearLayout>