<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF731D"
    android:orientation="vertical"
    tools:context=".activities.MainActivity">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical"
        tools:ignore="ExtraText">

        <TextView

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/txv_vista1"
            android:textAlignment="center"
            android:textSize="40sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"

        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_marginBottom="5dp"
            android:text="@string/txv_bienvenido"
            android:textAlignment="center"
            android:textSize="50sp"
            android:textStyle="bold" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="#ECDAB8">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="394dp"
            android:layout_height="341dp"
            android:layout_marginTop="1dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/img_can" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnIniciarSesion"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/beige"
            android:text="@string/txt_iniciar_sesion"
            android:textColor="@color/orange" />

        <Button
            android:id="@+id/btnRegistrarse"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="@color/beige"
            android:text="@string/txt_registrarse"
            android:textColor="@color/orange" />
    </LinearLayout>


</LinearLayout>
